# ai-policy-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit_report_2026-03-30.md
src/ai_policy_lab/: __init__.py  __main__.py  catalog.py  cli.py  config.py  graph.py  llm.py  runtime.py  sanitize.py  state.py  utils.py
src/ai_policy_lab/agents/: __init__.py  adversarial_reviewer.py  base.py  data_scout.py  economic_complexity.py  literature_review.py  methodology_reviewer.py  policy_scanner.py  political_economy.py  quantitative_analyst.py  research_director.py  source_quality_auditor.py
src/ai_policy_lab/connectors/: __init__.py  base.py  bls.py  census.py  crossref.py  federal_register.py  fred.py  onet.py  scholar.py  web_search.py
src/ai_policy_lab/report/: __init__.py  renderer.py
src/ai_policy_lab/research_tracks/: __init__.py  great_reallocation.py
tests/: test_adversarial_reviewer.py  test_agents.py  test_cli.py  test_config.py  test_connectors.py  test_graph.py  test_great_reallocation.py  test_llm.py  test_policy_scanner.py  test_report.py  test_runtime.py  test_sanitize.py  test_state.py  test_utils.py
